--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +14,79 @@
         {% endblock %}
     </head>
     <body>
+        {% block header %}
+        <nav class="navbar  navbar-expand-lg navbar-dark p-md-3 bg-dark">
+        <div class="container-fluid">
+            <a href="#" class="navbar-brand">FPT.co</a>
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+                aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarExample01">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link text-white" aria-current="page" href="{{path('home_page')}}">Home</a>
+                    </li>
+                    {# {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_STAFF') or is_granted('ROLE_USER')%} #}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{{path('student_index')}}">Student</a>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="">Teacher</a>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{{path('class_index')}}">Class</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="">Course</a>
+                    </li>
+                    {# {% endif %} #}
+                </ul>
+                    {# {% if is_granted('ROLE_ADMIN') %}
+                    <span class="mr-6 text-white">Admin</span>
+                     {% elseif is_granted('ROLE_STAFF') %}
+                     <span class="mr-6 text-white">Staff</span>
+                     {% elseif is_granted('ROLE_USER') %}
+                        <span class="mr-6 text-white">User</span>
+                     {% else %}
+                       <span class="mr-6 text-white">Not logged in!</span>
+                    {% endif %} #}
+                <!-- Avatar -->
+                <a class="dropdown-toggle d-flex align-items-center" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-mdb-toggle="dropdown" aria-expanded="false">
+                    <img src="{{ asset ('images/user.png')}}" class="rounded-circle" height="25" alt="Error!" loading="lazy" />
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                    {# {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_STAFF') or is_granted('ROLE_USER')%} #}
+                    <li>
+                        <a class="dropdown-item nav-link" href="">Log out</a>
+                    </li>
+                    {# {% else %} #}
+                    <li>
+                        <a class="dropdown-item nav-link" href="">Log in</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item nav-link" href="">Register</a>
+                    </li>
+                    {# {% endif %} #}
+                </ul>
+            </div>
+        </div>
+  </nav>  
+   <div class="container mt-3 text-center col-md-5">
+            {% for error in app.flashes('error') %}
+                <p class=" alert alert-warning">{{error}}</p>
+            {% endfor %}
+            {% for errorEmpty in app.flashes('errorEmpty') %}
+            <p class=" alert alert-success">{{errorEmpty}}</p>
+            {% endfor %}
+             {% for success in app.flashes('success') %}
+            <p class=" alert alert-success">{{success}}</p>
+            {% endfor %}
+        </div>
+        {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
