--- a/templates/teacher/add.html.twig
+++ b/templates/teacher/add.html.twig
@@ -1,4 +1,4 @@
-{% form_theme genreForm 'bootstrap_5_layout.html.twig' %}
+{% form_theme teacherForm 'bootstrap_5_layout.html.twig' %}
 {% extends "base.html.twig" %}
 
 {% block body %}
