--- a/templates/teacher/index.html.twig
+++ b/templates/teacher/index.html.twig
@@ -1,20 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TeacherController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/admin/Documents/GitHub/group1x/src/Controller/TeacherController.php'|file_link(0) }}">src/Controller/TeacherController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/admin/Documents/GitHub/group1x/templates/teacher/index.html.twig'|file_link(0) }}">templates/teacher/index.html.twig</a></code></li>
-    </ul>
+<div class="container-fluid col-md-8 text-center">
+    <h2 class="text text-success mb-2">Genre List</h2>
+    <a class="btn btn-primary mb-3" href="{{ path('teacher_add')}}">ADD</a>
+    <table class="table table-info">
+        <tr>
+            <th>Teacher Id</th>
+            <th>Teacher name</th>
+            <th>Teacher image</th>
+            <th>Menu</th>
+        </tr>
+        {% for teacher in teachers %}
+            <tr>
+                <td>{{ teacher.id }}</td>
+                <td>{{ teacher.name }}</td>
+                <td>
+                    <a href="{{ path('teacher_detail' , {'id' : teacher.id })}}">
+                        <img src="{{ teacher.image }}" width=100 height=100>
+                    </a>     
+                </td>
+                <td>
+                    <a class="btn btn-warning" href="{{ path('teacher_edit', {'id': teacher.id })}}">EDIT</a>
+                    <a class="btn btn-danger" href="{{ path('teacher_delete', {'id' : teacher.id })}}"
+                    onclick="return confirm('Do you want to delete this teacher ?');"
+                    >DELETE</a>
+                </td>
+            </tr>
+        {% endfor %}  
+    </table>
 </div>
 {% endblock %}
