--- a/templates/class/index.html.twig
+++ b/templates/class/index.html.twig
@@ -1,5 +1,71 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block title %}{% endblock %}
 
-{% endblock %}
+{% block body %}
+	<div class="app">
+
+		<div class="container">
+			<div class="grid">
+				<div class="row">
+					<h1 class="text-uppercase text-center mt-3">Class list</h1>
+					<div class="function__mgt">
+						{# {% if is_granted('ROLE_STAFF') %} #}
+							<div class="function__mgt-add">
+								<a class="btn btn-primary" href="{{ path('class_add') }}">Add Class</a>
+							</div>
+						{# {% endif %} #}
+						<div class="function__mgt-search">
+							<form class="d-flex input-group w-auto">
+								<input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon"/>
+								<span class="input-group-text border-0" id="search-addon">
+									<i class="fas fa-search"></i>
+								</span>
+							</form>
+						</div>
+
+					</div>
+					<div class="e-panel card" style="background-color: #f5f5f5">
+						<div class="card-body">
+							<div class="card-title"></div>
+							<div class="e-table">
+								<div class="table-responsive table-lg mt-3">
+									<table class="table table-bordered">
+										<thead style="text-align: center;">
+											<tr>
+												<th>ID</th>
+												<th>Name</th>
+												{# {% if is_granted('ROLE_STAFF') %} #}
+													<th>Option</th>
+												{# {% endif %} #}
+											</tr>
+										</thead>
+										<tbody style="text-align: center;">
+											{% for class in classes %}
+												<tr>
+													<td>{{class.id}}</td>
+													<td>
+														<a href="{{path('class_detail',{'id':class.id})}}">{{class.name}}</a>
+													</td>
+													{# {% if is_granted('ROLE_STAFF') %} #}
+														<td>
+															<a class="btn btn-info" href="{{path('class_edit',{'id':class.id})}}">
+																<i class="fas fa-user-edit"></i>
+															</a>
+															<a class="btn btn-danger" href="{{path('class_delete',{'id':class.id})}}" onclick="return confirm('Are you sure to delete this class')">
+																<i class="fas fa-trash-alt"></i>
+															</a>
+														</td>
+													{# {% endif %} #}
+												</tr>
+											{% endfor %}
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	{% endblock %}
