--- a/templates/student/index.html.twig
+++ b/templates/student/index.html.twig
@@ -36,9 +36,9 @@
 											<th>ID</th>
 											<th>NAME</th>
 											<th>Image</th>
-                                             {# {% if is_granted('ROLE_STAFF') %} #}
+                                             {% if is_granted('ROLE_STAFF') %}
 											<th>Menu</th>
-                                            {# {% endif %} #}
+                                            {% endif %}
 										</tr>
                                         </thead>
                                         <tbody style="text-align: center;">
@@ -51,7 +51,7 @@
 															</a>
 														</td>
 														<td><a href="{{ path('student_detail', {'id': student.id}) }}"><img src="{{asset('images/students/'~student.image) }}" width=150 height=150></a></td>
-                                                         {# {% if is_granted('ROLE_STAFF') %} #}
+                                                         {% if is_granted('ROLE_STAFF') %}
 														<td>
 														<a  class="btn btn-success" href="{{ path('student_edit', {'id': student.id}) }}">
 														<i class="fas fa-user-edit"></i></a>
@@ -59,7 +59,7 @@
 														onclick="return confirm('Are you sure to delete this student ?')">
 														<i class="fas fa-trash-alt"></i></a>
 													</td>
-                                                        {# {% endif %} #}
+                                                        {% endif %}
 													</tr>
 												{% endfor %}
                                         </tbody>
