--- a/templates/class/add.html.twig
+++ b/templates/class/add.html.twig
@@ -13,14 +13,14 @@
             }}
             
          </div>
-         {# <div class="form-group">
+         <div class="form-group">
             {{ form_label(form.course) }}
             {{ form_widget(form.course,
                {
                   'attr': { 'class' : 'form-control'}
                })
             }}
-         </div> #}
+         </div>
          <div class="form-group">
             {{ form_label(form.student) }}
             {{ form_widget(form.student,
