--- a/templates/class/detail.html.twig
+++ b/templates/class/detail.html.twig
@@ -17,7 +17,7 @@
                                         <thead style="text-align: center;">
                                          <tr>					
 											<th>Student</th>
-                                            {# <th>Course</th> #}
+                                            <th>Course</th>
                                             <th>Quantity of student</th>
                                             <th>Quantity of course</th>
 										</tr>
@@ -32,14 +32,16 @@
                                                     <br>
 												{% endfor %}
                                                 </td>
-												{# <td>				
+												<td>				
                                                     {% for c in class.course %}       
-                                                        <a href="{{path('teacher_detail',{'id':c.teacher.id})}}">
-                                                        {{c.name}} - {{c.teacher.name}}   
-                                                        </a>            
+                                                        {# <a href="{{path('teacher_detail',{'id':c.teacher.id})}}">
+                                                        {{c.name}} 
+                                                        - {{c.teacher.name}}   
+                                                        </a>             #}
+                                                        {{c.name}}
                                                         <br>       
 											    	{% endfor %}
-												</td> #}
+												</td>
                                                 <td>{{class.student|length}}</td>
                                                 <td>{{class.course|length}}</td>
 											</tr>
