--- a/templates/class/index.html.twig
+++ b/templates/class/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}{% endblock %}
 
 {% block body %}
+<body class="bg-info">
 	<div class="app">
 
 		<div class="container">
@@ -10,19 +11,11 @@
 				<div class="row">
 					<h1 class="text-uppercase text-center mt-3">Class list</h1>
 					<div class="function__mgt">
-						{# {% if is_granted('ROLE_STAFF') %} #}
+						{% if is_granted('ROLE_STAFF') %}
 							<div class="function__mgt-add">
-								<a class="btn btn-primary" href="{{ path('class_add') }}">Add Class</a>
+								<a class="btn btn-primary m-lg-1" href="{{ path('class_add') }}">Add Class</a>
 							</div>
-						{# {% endif %} #}
-						<div class="function__mgt-search">
-							<form class="d-flex input-group w-auto">
-								<input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon"/>
-								<span class="input-group-text border-0" id="search-addon">
-									<i class="fas fa-search"></i>
-								</span>
-							</form>
-						</div>
+						{% endif %}
 
 					</div>
 					<div class="e-panel card" style="background-color: #f5f5f5">
@@ -35,9 +28,9 @@
 											<tr>
 												<th>ID</th>
 												<th>Name</th>
-												{# {% if is_granted('ROLE_STAFF') %} #}
+												{% if is_granted('ROLE_STAFF') %}
 													<th>Option</th>
-												{# {% endif %} #}
+												{% endif %}
 											</tr>
 										</thead>
 										<tbody style="text-align: center;">
@@ -47,7 +40,7 @@
 													<td>
 														<a href="{{path('class_detail',{'id':class.id})}}">{{class.name}}</a>
 													</td>
-													{# {% if is_granted('ROLE_STAFF') %} #}
+													{% if is_granted('ROLE_STAFF') %}
 														<td>
 															<a class="btn btn-info" href="{{path('class_edit',{'id':class.id})}}">
 																<i class="fas fa-user-edit"></i>
@@ -56,7 +49,7 @@
 																<i class="fas fa-trash-alt"></i>
 															</a>
 														</td>
-													{# {% endif %} #}
+													{% endif %}
 												</tr>
 											{% endfor %}
 										</tbody>
@@ -68,4 +61,5 @@
 				</div>
 			</div>
 		</div>
+</body>
 	{% endblock %}
