--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,15 +3,19 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+<body class="bg-dark">
+<div class="mb-3 text-center">
+    <h1 class="text text-warning">Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
+       <div class="text text-light"> {{ form_row(registrationForm.username) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
     {{ form_end(registrationForm) }}
+</div>
+</body>
 {% endblock %}
