--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Group 1{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
@@ -18,7 +18,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet" />
          <link rel="stylesheet" href="{{asset('../css/style.css')}}">
         {% endblock %}
-        <link rel="icon" type="image/ico" href="{{ asset('images/favicon.ico')}}"/>
+        <link rel="icon" type="image/png" href="{{ asset('images/android-chrome-192x192.png')}}"/>
         {% block javascripts %}
           
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js">
