--- a/templates/course/index.html.twig
+++ b/templates/course/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello CourseController!{% endblock %}
 
 {% block body %}
-{# <style>
+<style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
@@ -16,5 +16,5 @@
         <li>Your controller at <code><a href="{{ 'C:/Users/admin/Documents/GitHub/group1x/src/Controller/CourseController.php'|file_link(0) }}">src/Controller/CourseController.php</a></code></li>
         <li>Your template at <code><a href="{{ 'C:/Users/admin/Documents/GitHub/group1x/templates/course/index.html.twig'|file_link(0) }}">templates/course/index.html.twig</a></code></li>
     </ul>
-</div> #}
+</div>
 {% endblock %}
