Done taskbar: Teacher, Course

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,14 +45,14 @@
 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="">Teacher</a>
+                        <a class="nav-link text-white" href="{{path('teacher_index')}}">Teacher</a>
 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{{path('class_index')}}">Class</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="">Course</a>
+                        <a class="nav-link text-white" href="{{path('course_index')}}">Course</a>
                     </li>
                     {% endif %}
                 </ul>
