--- a/templates/teacher/index.html.twig
+++ b/templates/teacher/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container-fluid col-md-8 text-center">
-    <h2 class="text text-success mb-2">Genre List</h2>
+    <h2 class="text text-success mb-2">Teachers List</h2>
     <a class="btn btn-primary mb-3" href="{{ path('teacher_add')}}">ADD</a>
     <table class="table table-info">
         <tr>
